# conan-2-flatbuffers

./: Makefile  README.md  conanfile.py  options_build.txt  options_host.txt
flatbuffers_recipe/: conanfile.py
flatbuffers_recipe/test_package/: CMakeUserPresets.json
src/: CMakeLists.txt  main.cpp  monster.fbs
